MVP completed. Hooray!

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <form class="navbar-form navbar-right">
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Search">
+                    <input type="text" id="editDesc" placeholder="Search">
                 </div>
             </form>
         </div>
